crates/modde-cli/tests/snapshots/cli_help_snapshots__snapshot_doctor_help.snap
---
source: crates/modde-cli/tests/cli_help_snapshots.rs
expression: "stdout(&[\"doctor\", \"--help\"])"
---
Diagnose profiles and crash logs with grounded evidence

Usage: modde doctor [OPTIONS] <COMMAND>

Commands:
  profile  Diagnose common profile problems from modde's local database
  crash    Parse and correlate a local crash log with a profile's installed mods
  explain  Ask an OpenAI-compatible LLM for grounded, cited hypotheses
  help     Print this message or the help of the given subcommand(s)

Options:
      --data-dir <DATA_DIR>          Override data directory (default: ~/.local/share/modde or $`MODDE_DATA_DIR`) [env: MODDE_DATA_DIR=]
      --config-dir <CONFIG_DIR>      Override the base configuration directory used by modde and its session journal
      --heap-profile <HEAP_PROFILE>  Write a DHAT heap profile. Requires the `heap-profile` cargo feature [env: MODDE_HEAP_PROFILE=]
  -h, --help                         Print help
