crates/modde-cli/tests/snapshots/cli_help_snapshots__snapshot_game_export_help.snap
---
source: crates/modde-cli/tests/cli_help_snapshots.rs
expression: "stdout(&[\"game\", \"export\", \"--help\"])"
---
Export a game registration to TOML

Usage: modde game export [OPTIONS] <ID>

Arguments:
  <ID>  

Options:
      --data-dir <DATA_DIR>          Override data directory (default: ~/.local/share/modde or $`MODDE_DATA_DIR`) [env: MODDE_DATA_DIR=]
      --with-optiscaler              
      --config-dir <CONFIG_DIR>      Override the base configuration directory used by modde and its session journal
      --output <OUTPUT>              
      --heap-profile <HEAP_PROFILE>  Write a DHAT heap profile. Requires the `heap-profile` cargo feature [env: MODDE_HEAP_PROFILE=]
  -h, --help                         Print help
